--- a/engineeringList1.html
+++ b/engineeringList1.html
@@ -23,9 +23,6 @@
     <link href="assets/js/footable/css/footable-demos.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/js/dataTable/lib/jquery.dataTables/css/DT_bootstrap.css">
     <link rel="stylesheet" href="assets/js/dataTable/css/datatables.responsive.css">
-    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
-
-    <link href="lib/pagination/pagination.css" rel="stylesheet">
 
 </head>
 
@@ -205,7 +202,7 @@
                                             <form id="searchDiv">
                                                 <div class="form-group has-feedback">
                                                     <span class="twitter-typeahead" style="position: relative; display: inline-block; direction: ltr;"><input type="text" id="searchBox" class="form-control typeahead tt-input" placeholder="信息检索..." autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;"><pre aria-hidden="true" style="position: absolute; visibility: hidden; white-space: pre; font-family: &quot;Microsoft Yahei&quot;, 微软雅黑, Pinghei; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; word-spacing: 0px; letter-spacing: 0px; text-indent: 0px; text-rendering: auto; text-transform: none;"></pre><span class="tt-dropdown-menu" style="position: absolute; top: 100%; left: 0px; z-index: 100; display: none; right: auto; width: 208px;"><div class="tt-dataset-admin_adrs"></div></span></span>
-                                                    <span class="glyphicon glyphicon-search form-control-feedback nomarl" id="searchButton" aria-hidden="true" style="top:0px;"></span>
+                                                    <span class="glyphicon glyphicon-search form-control-feedback nomarl" aria-hidden="true" style="top:0px;"></span>
                                                 </div>
                                             </form>
                                         </li>
@@ -236,10 +233,10 @@
                                         </thead>
                                         <tbody class="tableContent">
                                         </tbody>
-                                        <tfoot class="tfooter loading-light">
+                                        <tfoot class="loading-light">
                                             <tr>
                                                 <td colspan="8" style="height:34px;">
-                                                    <div id="pagination" class="pagination-jq pull-right"></div>
+                                                    <div class="pagination pagination-centered pull-right"></div>
                                                 </td>
                                             </tr>
                                         </tfoot>
@@ -652,12 +649,13 @@
     <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
 
-    <script src="lib/pagination/jquery.pagination.js"></script>
-
     <!-- /MAIN EFFECT -->
     <!-- GAGE -->
     <script type="text/javascript" src="assets/js/toggle_close.js"></script>
     <script src="assets/js/footable/js/footable.js?v=2-0-1" type="text/javascript"></script>
+    <script src="assets/js/footable/js/footable.sort.js?v=2-0-1" type="text/javascript"></script>
+    <script src="assets/js/footable/js/footable.filter.js?v=2-0-1" type="text/javascript"></script>
+    <script src="assets/js/footable/js/footable.paginate.js?v=2-0-1" type="text/javascript"></script>
 
     <script src="lib/require.js" type="text/javascript"></script>
     <script type="text/javascript" src="app/config/requireConfig.js"></script>
